# Dotty-Legal-AI-

./: .gitignore  ACCESSIBILITY.md  CONTRIBUTING.md  LICENCE.md  LICENSE  PERSONA.md  README  README.md  SOURCE_POLICY.md  VALUES.md  WORKFLOW.md  dotty.py  pyproject.toml  requirements.txt
configs/: dotty_persona.yaml
dotty/: cli.py  config.py  core.py
dotty/modules/: ada.py  citation.py
dotty/utils/: config.py
dotty_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: dotty_cli.py
